Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI429NET.VB

        Public Declare Sub BTI429_MsgSkipWr Lib "BTI42964.DLL" Alias "BTI429_MsgSkipWr" (ByVal skip As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_MsgSyncDefine Lib "BTI42964.DLL" Alias "BTI429_MsgSyncDefine" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgTriggerDefine Lib "BTI42964.DLL" Alias "BTI429_MsgTriggerDefine" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ParamAmplitudeConfig Lib "BTI42964.DLL" Alias "BTI429_ParamAmplitudeConfig" (ByVal configval As UInt32, ByVal dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ParamAmplitudeGet Lib "BTI42964.DLL" Alias "BTI429_ParamAmplitudeGet" (ByRef dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ParamBitCountBuild Lib "BTI42964.DLL" Alias "BTI429_ParamBitCountBuild" (ByVal bitcount As Int32) As UInt16
        Public Declare Function BTI429_ParamBitRateConfig Lib "BTI42964.DLL" Alias "BTI429_ParamBitRateConfig" (ByVal configval As UInt32, ByVal divval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ParamBitRateGet Lib "BTI42964.DLL" Alias "BTI429_ParamBitRateGet" (ByRef divval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBranch Lib "BTI42964.DLL" Alias "BTI429_SchedBranch" (ByVal condition As UInt32, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBranchUpdate Lib "BTI42964.DLL" Alias "BTI429_SchedBranchUpdate" (ByVal destindex As Int32, ByVal opcodeindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedBuild Lib "BTI42964.DLL" Alias "BTI429_SchedBuild" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedCall Lib "BTI42964.DLL" Alias "BTI429_SchedCall" (ByVal condition As UInt32, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedCallUpdate Lib "BTI42964.DLL" Alias "BTI429_SchedCallUpdate" (ByVal destindex As Int32, ByVal opcodeindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedEntry Lib "BTI42964.DLL" Alias "BTI429_SchedEntry" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedGap Lib "BTI42964.DLL" Alias "BTI429_SchedGap" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedGapFixed Lib "BTI42964.DLL" Alias "BTI429_SchedGapFixed" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedGapList Lib "BTI42964.DLL" Alias "BTI429_SchedGapList" (ByVal gapval As UInt16, ByVal listaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedHalt Lib "BTI42964.DLL" Alias "BTI429_SchedHalt" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedLog Lib "BTI42964.DLL" Alias "BTI429_SchedLog" (ByVal condition As UInt32, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedMode Lib "BTI42964.DLL" Alias "BTI429_SchedMode" (ByVal modeval As UInt32) As Int32
        Public Declare Function BTI429_SchedMsg Lib "BTI42964.DLL" Alias "BTI429_SchedMsg" (ByVal msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedMsgEx Lib "BTI42964.DLL" Alias "BTI429_SchedMsgEx" (ByVal msgaddr As UInt32, ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedPause Lib "BTI42964.DLL" Alias "BTI429_SchedPause" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedPulse Lib "BTI42964.DLL" Alias "BTI429_SchedPulse" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedRestart Lib "BTI42964.DLL" Alias "BTI429_SchedRestart" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_SchedReturn Lib "BTI42964.DLL" Alias "BTI429_SchedReturn" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChConfigEx Lib "BTI42964.DLL" Alias "BTI429_ChConfigEx" (ByVal configval As UInt32, ByVal count As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ChOutputStateSet Lib "BTI42964.DLL" Alias "BTI429_ChOutputStateSet" (ByVal pos As UInt32, ByVal neg As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdAddr Lib "BTI42964.DLL" Alias "BTI429_CmdAddr" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_CmdAlloc Lib "BTI42964.DLL" Alias "BTI429_CmdAlloc" (ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_CmdAllocEx Lib "BTI42964.DLL" Alias "BTI429_CmdAllocEx" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_CmdBaseRd Lib "BTI42964.DLL" Alias "BTI429_CmdBaseRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTI429_CmdBaseWr Lib "BTI42964.DLL" Alias "BTI429_CmdBaseWr" (ByVal addrval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdClear Lib "BTI42964.DLL" Alias "BTI429_CmdClear" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdCountRd Lib "BTI42964.DLL" Alias "BTI429_CmdCountRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_CmdCountWr Lib "BTI42964.DLL" Alias "BTI429_CmdCountWr" (ByVal countval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdCtrlRd Lib "BTI42964.DLL" Alias "BTI429_CmdCtrlRd" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_CmdCtrlWr Lib "BTI42964.DLL" Alias "BTI429_CmdCtrlWr" (ByVal ctrlval As UInt16, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdCurrRd Lib "BTI42964.DLL" Alias "BTI429_CmdCurrRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_CmdCurrWr Lib "BTI42964.DLL" Alias "BTI429_CmdCurrWr" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_CmdInit Lib "BTI42964.DLL" Alias "BTI429_CmdInit" (ByVal opcode As UInt16, ByRef block As UInt16)
        Public Declare Function BTI429_CmdInsert Lib "BTI42964.DLL" Alias "BTI429_CmdInsert" (ByRef block As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdMaxLoopRd Lib "BTI42964.DLL" Alias "BTI429_CmdMaxLoopRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_CmdMaxLoopWr Lib "BTI42964.DLL" Alias "BTI429_CmdMaxLoopWr" (ByVal countval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdRd Lib "BTI42964.DLL" Alias "BTI429_CmdRd" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_CmdRestart Lib "BTI42964.DLL" Alias "BTI429_CmdRestart" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdShotRd Lib "BTI42964.DLL" Alias "BTI429_CmdShotRd" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdShotWr Lib "BTI42964.DLL" Alias "BTI429_CmdShotWr" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdSkipRd Lib "BTI42964.DLL" Alias "BTI429_CmdSkipRd" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdSkipWr Lib "BTI42964.DLL" Alias "BTI429_CmdSkipWr" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_CmdStackClr Lib "BTI42964.DLL" Alias "BTI429_CmdStackClr" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdStartRd Lib "BTI42964.DLL" Alias "BTI429_CmdStartRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_CmdStartWr Lib "BTI42964.DLL" Alias "BTI429_CmdStartWr" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdStepRd Lib "BTI42964.DLL" Alias "BTI429_CmdStepRd" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdStepWr Lib "BTI42964.DLL" Alias "BTI429_CmdStepWr" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_CmdTotalRd Lib "BTI42964.DLL" Alias "BTI429_CmdTotalRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_CmdTotalWr Lib "BTI42964.DLL" Alias "BTI429_CmdTotalWr" (ByVal countval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_CmdWr Lib "BTI42964.DLL" Alias "BTI429_CmdWr" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ConvFromArinc Lib "BTI42964.DLL" Alias "BTI429_ConvFromArinc" (ByVal msgval As UInt32) As UInt32
        Public Declare Function BTI429_ConvToArinc Lib "BTI42964.DLL" Alias "BTI429_ConvToArinc" (ByVal msgval As UInt32) As UInt32
        Public Declare Function BTI429_DllUsageCount Lib "BTI42964.DLL" Alias "BTI429_DllUsageCount" () As Int32
        Public Declare Function BTI429_FilterAddr Lib "BTI42964.DLL" Alias "BTI429_FilterAddr" (ByVal labelval As Int32, ByVal sdival As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_FilterCreate Lib "BTI42964.DLL" Alias "BTI429_FilterCreate" (ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_FilterFill Lib "BTI42964.DLL" Alias "BTI429_FilterFill" (ByVal msgaddr As UInt32, ByVal basevaladdr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_FldGetParBit Lib "BTI42964.DLL" Alias "BTI429_FldGetParBit" (ByVal msgval As UInt32) As UInt16
        Public Declare Function BTI429_FldPutParBit Lib "BTI42964.DLL" Alias "BTI429_FldPutParBit" (ByVal msgval As UInt32) As UInt32
        Public Declare Sub BTI429_GetChanCount Lib "BTI42964.DLL" Alias "BTI429_GetChanCount" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_IsChan Lib "BTI42964.DLL" Alias "BTI429_IsChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
